before starting lesson 3

--- a/02_production.ipynb
+++ b/02_production.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T12:26:26.661882Z",
+     "start_time": "2024-02-07T12:26:24.839749Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -14,8 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T12:26:27.936226Z",
+     "start_time": "2024-02-07T12:26:27.909676Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -176,6 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### Tabular data"
    ]
   },
@@ -289,6 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "At the time of writing, Bing Image Search is the best option we know of for finding and downloading images. It's free for up to 1,000 queries per month, and each query can download up to 150 images. However, something better might have come along between when we wrote this and when you're reading the book, so be sure to check out the [book's website](https://book.fast.ai/) for our current recommendation."
    ]
   },
