--- a/clean/02_production.ipynb
+++ b/clean/02_production.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T11:43:15.362672Z",
+     "start_time": "2024-02-07T11:43:09.691639Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -14,8 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T11:43:20.317623Z",
+     "start_time": "2024-02-07T11:43:20.311261Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -117,11 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T16:24:53.403505Z",
+     "start_time": "2024-02-02T16:24:53.400592Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "key = os.environ.get('AZURE_SEARCH_KEY', 'XXX')"
+    "#key = os.environ.get('AZURE_SEARCH_KEY', 'XXX')"
    ]
   },
   {
